# babell_core

./: Cargo.toml  game.html  index.html  log.txt  todo.todo
examples/: test_api.rs  test_igdb_all.rs  test_igdb_auth.rs  test_igdb_companies.rs  test_igdb_db_games.rs  test_igdb_extra.rs  test_igdb_games.rs  test_igdb_genres.rs  test_igdb_improve.rs  test_igdb_keywords.rs  test_igdb_languages.rs  test_igdb_sources.rs  test_igdb_themes.rs  test_source.rs
src/: lib.rs
src/flaresolverr/: client.rs  mod.rs  models.rs  parser.rs  storage.rs
src/igdb/: auth.rs  mod.rs  pipeline.rs
src/igdb/database/: games.rs  mod.rs  models.rs
src/igdb/dictionaries/: companies.rs  genres.rs  keywords.rs  language.rs  mod.rs  models.rs  sources.rs  themes.rs
src/igdb/extra/: core.rs  models.rs
src/igdb/games/: core.rs  models.rs
src/igdb/search_improve/: core.rs  models.rs
src/utils/: paths.rs
